# html4llms

./: LICENSE  README.md  main.py  pyproject.toml
html4llms/: __init__.py  cli.py
